--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Programming-Theory-Repo.sln"
+    "dotnet.defaultSolution": "Programming-Theory-Repo.sln",
+    "workbench.colorTheme": "Monolivia"
 }
